fix preload overflow, fix Youtube Api

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
   body {
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   .preloader {
